[gd_scene load_steps=10 format=4 uid="uid://d3v8iwe2y4s03"]

[ext_resource type="Script" uid="uid://c72yq6mxk8uve" path="res://Room.gd" id="1_dfvbp"]
[ext_resource type="Texture2D" uid="uid://bxsjmeqtltcd3" path="res://recursos/assets/InteriorTilesLITE.png" id="2_i6b2i"]
[ext_resource type="Texture2D" uid="uid://bypl3mxcoho6l" path="res://recursos/assets/piso madeira.png" id="3_mtey2"]
[ext_resource type="Texture2D" uid="uid://c4hestld5uiph" path="res://recursos/assets/piso azulejo 100x100.png" id="4_32b5u"]
[ext_resource type="PackedScene" uid="uid://t8qdmgd824st" path="res://cenas/door.tscn" id="5_eq784"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_to7kj"]
texture = ExtResource("2_i6b2i")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0/terrains_peering_bit/bottom_right_corner = 1
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0/terrains_peering_bit/bottom_right_corner = 1
2:0/0/terrains_peering_bit/bottom_side = 1
2:0/0/terrains_peering_bit/bottom_left_corner = 1
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:0/0/terrains_peering_bit/top_left_corner = 1
3:0/0/terrains_peering_bit/top_side = 1
3:0/0/terrains_peering_bit/top_right_corner = 1
6:0/0 = 0
6:0/0/terrain_set = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:0/0/terrains_peering_bit/bottom_left_corner = 1
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:0/0 = 0
9:0/0/terrain_set = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:0/0/terrains_peering_bit/bottom_right_corner = 1
9:0/0/terrains_peering_bit/bottom_left_corner = 1
10:0/0 = 0
10:0/0/terrain_set = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:0/0/terrains_peering_bit/right_side = 1
10:0/0/terrains_peering_bit/bottom_right_corner = 1
10:0/0/terrains_peering_bit/bottom_left_corner = 1
10:0/0/terrains_peering_bit/left_side = 1
10:0/0/terrains_peering_bit/top_left_corner = 1
10:0/0/terrains_peering_bit/top_side = 1
10:0/0/terrains_peering_bit/top_right_corner = 1
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:1/0/terrains_peering_bit/right_side = 1
1:1/0/terrains_peering_bit/bottom_right_corner = 1
1:1/0/terrains_peering_bit/top_right_corner = 1
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 1
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:1/0/terrains_peering_bit/right_side = 1
2:1/0/terrains_peering_bit/bottom_right_corner = 1
2:1/0/terrains_peering_bit/bottom_side = 1
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 1
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:1/0/terrains_peering_bit/right_side = 1
3:1/0/terrains_peering_bit/bottom_right_corner = 1
3:1/0/terrains_peering_bit/bottom_side = 1
3:1/0/terrains_peering_bit/bottom_left_corner = 1
3:1/0/terrains_peering_bit/left_side = 1
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/terrain = 1
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:1/0/terrains_peering_bit/bottom_side = 1
4:1/0/terrains_peering_bit/bottom_left_corner = 1
4:1/0/terrains_peering_bit/left_side = 1
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:1/0 = 0
6:1/0/terrain_set = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:1/0/terrains_peering_bit/bottom_left_corner = 1
6:1/0/terrains_peering_bit/left_side = 1
6:1/0/terrains_peering_bit/top_left_corner = 1
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:1/0 = 0
9:1/0/terrain_set = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:1/0/terrains_peering_bit/right_side = 1
9:1/0/terrains_peering_bit/bottom_right_corner = 1
9:1/0/terrains_peering_bit/bottom_left_corner = 1
9:1/0/terrains_peering_bit/left_side = 1
9:1/0/terrains_peering_bit/top_left_corner = 1
9:1/0/terrains_peering_bit/top_right_corner = 1
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
11:1/0 = 0
11:1/0/terrain_set = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
11:1/0/terrains_peering_bit/bottom_right_corner = 1
11:1/0/terrains_peering_bit/bottom_side = 1
11:1/0/terrains_peering_bit/bottom_left_corner = 1
11:1/0/terrains_peering_bit/left_side = 1
11:1/0/terrains_peering_bit/top_left_corner = 1
11:1/0/terrains_peering_bit/top_side = 1
11:1/0/terrains_peering_bit/top_right_corner = 1
12:1/0 = 0
12:1/0/terrain_set = 0
12:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
12:1/0/terrains_peering_bit/bottom_left_corner = 1
12:1/0/terrains_peering_bit/top_left_corner = 1
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:2/0/terrains_peering_bit/top_right_corner = 1
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 1
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:2/0/terrains_peering_bit/right_side = 1
2:2/0/terrains_peering_bit/top_side = 1
2:2/0/terrains_peering_bit/top_right_corner = 1
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 1
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:2/0/terrains_peering_bit/right_side = 1
3:2/0/terrains_peering_bit/left_side = 1
3:2/0/terrains_peering_bit/top_left_corner = 1
3:2/0/terrains_peering_bit/top_side = 1
3:2/0/terrains_peering_bit/top_right_corner = 1
4:2/0 = 0
4:2/0/terrain_set = 0
4:2/0/terrain = 1
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:2/0/terrains_peering_bit/left_side = 1
4:2/0/terrains_peering_bit/top_left_corner = 1
4:2/0/terrains_peering_bit/top_side = 1
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:2/0 = 0
6:2/0/terrain_set = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:2/0/terrains_peering_bit/top_left_corner = 1
9:2/0 = 0
9:2/0/terrain_set = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:2/0/terrains_peering_bit/right_side = 1
9:2/0/terrains_peering_bit/bottom_right_corner = 1
9:2/0/terrains_peering_bit/bottom_side = 1
9:2/0/terrains_peering_bit/bottom_left_corner = 1
9:2/0/terrains_peering_bit/left_side = 1
9:2/0/terrains_peering_bit/top_left_corner = 1
9:2/0/terrains_peering_bit/top_right_corner = 1
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
11:2/0 = 0
11:2/0/terrain_set = 0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
11:2/0/terrains_peering_bit/bottom_right_corner = 1
11:2/0/terrains_peering_bit/bottom_side = 1
11:2/0/terrains_peering_bit/bottom_left_corner = 1
11:2/0/terrains_peering_bit/top_left_corner = 1
11:2/0/terrains_peering_bit/top_side = 1
11:2/0/terrains_peering_bit/top_right_corner = 1
12:2/0 = 0
12:2/0/terrain_set = 0
12:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
12:2/0/terrains_peering_bit/right_side = 1
12:2/0/terrains_peering_bit/bottom_right_corner = 1
12:2/0/terrains_peering_bit/bottom_side = 1
12:2/0/terrains_peering_bit/bottom_left_corner = 1
12:2/0/terrains_peering_bit/top_left_corner = 1
12:2/0/terrains_peering_bit/top_side = 1
12:2/0/terrains_peering_bit/top_right_corner = 1
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
0:11/0 = 0
1:11/0 = 0
3:11/0 = 0
4:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
0:12/0 = 0
1:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gsbyr"]
texture = ExtResource("3_mtey2")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_right_corner = 0
0:0/0/terrains_peering_bit/bottom_side = 0
0:0/0/terrains_peering_bit/bottom_left_corner = 0
0:0/0/terrains_peering_bit/left_side = 0
0:0/0/terrains_peering_bit/top_left_corner = 0
0:0/0/terrains_peering_bit/top_side = 0
0:0/0/terrains_peering_bit/top_right_corner = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8iyyb"]
texture = ExtResource("4_32b5u")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 2
0:0/0/terrains_peering_bit/right_side = 2
0:0/0/terrains_peering_bit/bottom_right_corner = 2
0:0/0/terrains_peering_bit/bottom_side = 2
0:0/0/terrains_peering_bit/bottom_left_corner = 2
0:0/0/terrains_peering_bit/left_side = 2
0:0/0/terrains_peering_bit/top_left_corner = 2
0:0/0/terrains_peering_bit/top_side = 2
0:0/0/terrains_peering_bit/top_right_corner = 2

[sub_resource type="TileSet" id="TileSet_3t2tq"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 0
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Piso"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
terrain_set_0/terrain_1/name = "Parede"
terrain_set_0/terrain_1/color = Color(0.5, 0.4375, 0.25, 1)
terrain_set_0/terrain_2/name = "Piso 2"
terrain_set_0/terrain_2/color = Color(0.46875, 0.5, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_to7kj")
sources/1 = SubResource("TileSetAtlasSource_gsbyr")
sources/2 = SubResource("TileSetAtlasSource_8iyyb")

[node name="Room" type="Node2D"]
script = ExtResource("1_dfvbp")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
scale = Vector2(1.5, 1.5)
tile_map_data = PackedByteArray("AAAOAAoAAgAAAAAAAAAOAAkAAgAAAAAAAAAOAAgAAgAAAAAAAAAOAAcAAgAAAAAAAAAOAAYAAgAAAAAAAAAOAAUAAgAAAAAAAAAOAAQAAgAAAAAAAAAOAAMAAgAAAAAAAAAOAAIAAgAAAAAAAAAOAAEAAgAAAAAAAAANAAoAAgAAAAAAAAANAAkAAgAAAAAAAAANAAgAAgAAAAAAAAANAAcAAgAAAAAAAAANAAYAAgAAAAAAAAANAAUAAgAAAAAAAAANAAQAAgAAAAAAAAANAAMAAgAAAAAAAAANAAIAAgAAAAAAAAANAAEAAgAAAAAAAAAMAAoAAgAAAAAAAAAMAAkAAgAAAAAAAAAMAAgAAgAAAAAAAAAMAAcAAgAAAAAAAAAMAAYAAgAAAAAAAAAMAAUAAgAAAAAAAAAMAAQAAgAAAAAAAAAMAAMAAgAAAAAAAAAMAAIAAgAAAAAAAAAMAAEAAgAAAAAAAAALAAoAAgAAAAAAAAALAAkAAgAAAAAAAAALAAgAAgAAAAAAAAALAAcAAgAAAAAAAAALAAYAAgAAAAAAAAALAAUAAgAAAAAAAAALAAQAAgAAAAAAAAALAAMAAgAAAAAAAAALAAIAAgAAAAAAAAALAAEAAgAAAAAAAAAKAAoAAgAAAAAAAAAKAAkAAgAAAAAAAAAKAAgAAgAAAAAAAAAKAAcAAgAAAAAAAAAKAAYAAgAAAAAAAAAKAAUAAgAAAAAAAAAKAAQAAgAAAAAAAAAKAAMAAgAAAAAAAAAKAAIAAgAAAAAAAAAKAAEAAgAAAAAAAAAJAAoAAgAAAAAAAAAJAAkAAgAAAAAAAAAJAAgAAgAAAAAAAAAJAAcAAgAAAAAAAAAJAAYAAgAAAAAAAAAJAAQAAgAAAAAAAAAJAAMAAgAAAAAAAAAJAAIAAgAAAAAAAAAJAAEAAgAAAAAAAAAIAAoAAgAAAAAAAAAIAAkAAgAAAAAAAAAIAAgAAgAAAAAAAAAIAAcAAgAAAAAAAAAIAAYAAgAAAAAAAAAIAAUAAgAAAAAAAAAIAAQAAgAAAAAAAAAIAAMAAgAAAAAAAAAIAAIAAgAAAAAAAAAIAAEAAgAAAAAAAAAHAAoAAgAAAAAAAAAHAAkAAgAAAAAAAAAHAAgAAgAAAAAAAAAHAAcAAgAAAAAAAAAHAAYAAgAAAAAAAAAHAAUAAgAAAAAAAAAHAAQAAgAAAAAAAAAHAAMAAgAAAAAAAAAHAAIAAgAAAAAAAAAHAAEAAgAAAAAAAAAGAAoAAgAAAAAAAAAGAAkAAgAAAAAAAAAGAAgAAgAAAAAAAAAGAAcAAgAAAAAAAAAGAAYAAgAAAAAAAAAGAAUAAgAAAAAAAAAGAAQAAgAAAAAAAAAGAAMAAgAAAAAAAAAGAAIAAgAAAAAAAAAGAAEAAgAAAAAAAAAFAAoAAgAAAAAAAAAFAAkAAgAAAAAAAAAFAAgAAgAAAAAAAAAFAAcAAgAAAAAAAAAFAAYAAgAAAAAAAAAFAAUAAgAAAAAAAAAFAAQAAgAAAAAAAAAFAAMAAgAAAAAAAAAFAAIAAgAAAAAAAAAFAAEAAgAAAAAAAAAEAAoAAgAAAAAAAAAEAAkAAgAAAAAAAAAEAAgAAgAAAAAAAAAEAAcAAgAAAAAAAAAEAAYAAgAAAAAAAAAEAAUAAgAAAAAAAAAEAAQAAgAAAAAAAAAEAAMAAgAAAAAAAAAEAAIAAgAAAAAAAAAEAAEAAgAAAAAAAAADAAoAAgAAAAAAAAADAAcAAgAAAAAAAAADAAYAAgAAAAAAAAADAAUAAgAAAAAAAAADAAQAAgAAAAAAAAADAAMAAgAAAAAAAAADAAIAAgAAAAAAAAADAAEAAgAAAAAAAAACAAoAAgAAAAAAAAACAAkAAgAAAAAAAAACAAgAAgAAAAAAAAACAAcAAgAAAAAAAAACAAYAAgAAAAAAAAACAAUAAgAAAAAAAAACAAQAAgAAAAAAAAACAAMAAgAAAAAAAAACAAIAAgAAAAAAAAACAAEAAgAAAAAAAAABAAoAAgAAAAAAAAABAAkAAgAAAAAAAAABAAgAAgAAAAAAAAABAAcAAgAAAAAAAAABAAYAAgAAAAAAAAABAAUAAgAAAAAAAAABAAQAAgAAAAAAAAABAAMAAgAAAAAAAAABAAIAAgAAAAAAAAABAAEAAgAAAAAAAAAOAAAAAAADAAIAAAAOAP//AAADAAEAAAANAAAAAAADAAIAAAANAP//AAADAAEAAAAMAAAAAAADAAIAAAAMAP//AAADAAEAAAALAAAAAAADAAIAAAALAP//AAADAAEAAAAKAAAAAAADAAIAAAAKAP//AAADAAEAAAAJAAAAAAADAAIAAAAJAP//AAADAAEAAAAIAAAAAAADAAIAAAAIAP//AAADAAEAAAAHAAAAAAADAAIAAAAHAP//AAADAAEAAAAGAAAAAAADAAIAAAAGAP//AAADAAEAAAAFAAAAAAADAAIAAAAFAP//AAADAAEAAAAEAAAAAAADAAIAAAAEAP//AAADAAEAAAADAAAAAAADAAIAAAADAP//AAADAAEAAAACAAAAAAADAAIAAAACAP//AAADAAEAAAABAAAAAAADAAIAAAABAP//AAADAAEAAAADAAkAAgAAAAAAAAADAAgAAgAAAAAAAAAPAAkAAAAGAAEAAAAPAAgAAAAGAAEAAAAPAAcAAAAGAAEAAAAPAAYAAAAGAAEAAAAPAAUAAAAGAAEAAAAPAAQAAAAGAAEAAAAPAAMAAAAGAAEAAAAPAAIAAAAGAAEAAAAPAAEAAAAGAAEAAAAPAAAAAAAGAAEAAAAPAP//AAAGAAEAAAAAAAoAAAABAAEAAAAAAAkAAAABAAEAAAAAAAgAAAABAAEAAAAAAAcAAAABAAEAAAAAAAYAAAABAAEAAAAAAAUAAAABAAEAAAAAAAQAAAABAAEAAAAAAAMAAAABAAEAAAAAAAIAAAABAAEAAAAAAAEAAAABAAEAAAAAAAAAAAABAAEAAAAAAP//AAABAAEAAAAOAAsAAAADAAAAAAANAAsAAAADAAAAAAAMAAsAAAADAAAAAAALAAsAAAADAAAAAAAKAAsAAAADAAAAAAAJAAsAAAADAAAAAAAIAAsAAAADAAAAAAAHAAsAAAADAAAAAAAGAAsAAAADAAAAAAAFAAsAAAADAAAAAAAEAAsAAAADAAAAAAADAAsAAAADAAAAAAACAAsAAAADAAAAAAABAAsAAAADAAAAAAAAAAsAAAABAAIAAAAPAAoAAAAGAAEAAAAPAAsAAAAGAAIAAAAJAAUAAgAAAAAAAAA=")
tile_set = SubResource("TileSet_3t2tq")

[node name="Doors" type="Node2D" parent="."]

[node name="DoorNorth" parent="Doors" instance=ExtResource("5_eq784")]
position = Vector2(386, 46)

[node name="DoorSouth" parent="Doors" instance=ExtResource("5_eq784")]
position = Vector2(387, 536)

[node name="DoorEast" parent="Doors" instance=ExtResource("5_eq784")]
position = Vector2(723, 289)
rotation = 1.5707964

[node name="DoorWest" parent="Doors" instance=ExtResource("5_eq784")]
position = Vector2(48, 287)
rotation = 1.5707964

[node name="Enemies" type="Node2D" parent="."]

[node name="SpawnPoint_South" type="Marker2D" parent="."]
position = Vector2(385, 432)

[node name="SpawnPoint_West" type="Marker2D" parent="."]
position = Vector2(144, 288)

[node name="SpawnPoint_East" type="Marker2D" parent="."]
position = Vector2(625, 289)

[node name="SpawnPoint_North" type="Marker2D" parent="."]
position = Vector2(387, 143)

[connection signal="player_triggered" from="Doors/DoorNorth" to="." method="_on_door_north_player_triggered"]
[connection signal="player_triggered" from="Doors/DoorSouth" to="." method="_on_door_south_player_triggered"]
[connection signal="player_triggered" from="Doors/DoorEast" to="." method="_on_door_east_player_triggered"]
[connection signal="player_triggered" from="Doors/DoorWest" to="." method="_on_door_west_player_triggered"]
